Added Model of Emotions

--- a/DBTApp/index.html
+++ b/DBTApp/index.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="/styles/diarycards.css">
     <link rel="stylesheet" href="/styles/notepad.css">
     <link rel="stylesheet" href="/styles/calendar.css">
+    <link rel="stylesheet" href="/styles/modelsofemotions.css">
     <link rel="stylesheet" href="/styles/skills.css">
     <link rel="stylesheet" href="/styles/library.css">
     <link rel="stylesheet" href="/styles/store.css">
@@ -87,6 +88,9 @@
         </div>
         <div id="DiaryCards" class="screen" name="Diary Cards">
             <!-- Contents filled in by diarycards.js -->
+        </div>
+        <div id="ModelsOfEmotions" class="screen" name="Models of Emotions">
+            <!-- Contents filled in by modelsofemotions.js -->
         </div>
         <div id="Skills" class="screen" name="Practice Skills">
             <!-- Contents filled in by skills.js -->
@@ -165,6 +169,7 @@
                 <li data-screen="#Library"><span class="mainMenuItem"><img src="Icons/icon-menu-video.png" />Media Library</span></li>
                 <li data-screen="#Store"><span class="mainMenuItem"><img src="Icons/icon-menu-store.png" />Content Store</span></li>
                 <li data-screen="#DiaryCards"><span class="mainMenuItem"><img src="Icons/icon-menu-diarycard.png" />Diary Cards</span></li>
+                <li data-screen="#ModelsOfEmotions"><span class="mainMenuItem"><img src="Icons/icon-menu-emotionregulation.png" />Models of Emotions</span></li>
                 <li data-screen="#Notepad"><span class="mainMenuItem"><img src="Icons/icon-menu-notepad.png" />Notepad</span></li>
                 <li data-screen="#Calendar"><span class="mainMenuItem"><img src="Icons/icon-menu-calendar.png" />Calendar</span></li>
                 <li data-screen="#Profile"><span class="mainMenuItem"><img src="Icons/icon-menu-my-profile.png" />My Profile</span></li>
@@ -267,6 +272,7 @@
     <script src="scripts/diarycards.js"></script>
     <script src="scripts/notepad.js"></script>
     <script src="scripts/calendar.js"></script>
+    <script src="scripts/modelsofemotions.js"></script>
     <script src="scripts/skills.js"></script>
     <script src="scripts/library.js"></script>
     <script src="scripts/store.js"></script>
